@@ -5,8 +5,8 @@
 
 <META NAME="Description" CONTENT=" Free software for static and dynamic structural analysis of 3D moment-resisting frames with elastic and geometric stiffness. Written in ANSI C.  
 Source code includes:  frame analysis, LDL' decomposition, LU decomposition, sub-space iteration, Stodola iteration, Sturm eigenvalue checking,
-Static Condensation, Guyan Reduction and Dynamic Condensation.
-Matlab interface.
+Static Condensation, Dynamic Paz Condensation, Paz Condensation.
+Modal Condensation, Matlab interface.
 Graphical output and mode shape animation via gnuplot.">
 
 <META NAME="Keywords" CONTENT="Frame3DD, Structural Dynamics, Structural Analysis, Frame Analysis, 3D Frames, 3D Trusses, Structural Analysis Software, Geometric Stiffness, Geometric Stiffness Matrix, Modal Analysis, Modal Analysis Software, Structural Dynamics, Structural Dynamics Software, LDL Decomposition, LDL Decomposition, LU Decomposition, Subspace Iteration, gnuplot, matlab, octave, Henri Gavin, Duke">
@@ -123,8 +123,9 @@ factors of two- and three- dimensional elastic structures using
 direct stiffness and mass assembly.  Written in  C.  Source code
 includes: frame analysis, LDL' decomposition, LU decomposition,
 Newton-Raphson iteration, sub-space iteration, Stodola iteration,
-Sturm eigenvalue check, and Static Condensation, Guyan Reduction,
-Dynamic Condensation.  Graphical output and mode shape animation
+Sturm eigenvalue check, and Static Condensation, Dynamic Guyan Reduction,
+Dynamic Condensation, Modal Condensation.
+Graphical output and mode shape animation
 via <a href="http://www.gnuplot.info/">gnuplot</a> version 4.6.
 <hr>
 <h4>SYNOPSIS </h4>
@@ -1915,14 +1916,15 @@ below.)
 
 <p>
 Reduced order stiffness and mass matrices may be computed via a static
-condensation, Guyan reduction, or dynamic condensation.  The condensed mass
+condensation, dynamic condensation, or modal condensation.  The condensed mass
 and stiffness matrices are saved as text files called Kc and Mc.  
-The Guyan reduction
-method is generalized so that the condensed matrices match the fundamental
-frequency of the original structure exactly.  The dynamic condensation method
+The dynamic condensation 
+method is Paz's generalization of Guyan condensation so that the condensed matrices match the fundamental frequency of the original structure exactly. 
+The modal condensation method
 is a pseudo-inverse-modal-matrix method, and the resulting condensed mass and
-stiffness matrices may be ill-conditioned.  The pseudo-inverse of the modal
-matrix is computed using a regularization method which somewhat improves the
+stiffness matrices may be ill-conditioned.
+The pseudo-inverse of the modal matrix is computed using a
+regularization method which somewhat improves the
 conditioning of the condensed mass and stiffness matrices.
 </p>
 
@@ -2541,7 +2543,7 @@ pan                       # pan rate of the animation 0 = no panning
 
 # matrix condensation data ...
 
-Cmethod # matrix condensation method ...  0=none, 1=static, 2=Guyan, 3=dynamic
+Cmethod # matrix condensation method ...  0=none, 1=static, 2=dynamic, 3=modal
 nC      # number of condensed nodes
 #.node  X      Y      Z       XX      YY     ZZ   1: condense; 0: don't
  N[1]  cx[1]  cy[1]  cz[1]   cxx[1]  cyy[1] czz[1]
@@ -2562,7 +2564,7 @@ nC      # number of condensed nodes
                    (The x-axis is along the element length, in local coordinates)
     Asy          - Shear area in the local y-axis of a prismatic frame element
     Asz          - Shear area in the local z-axis of a prismatic frame element
-    Cmethod      -  matrix condensation method ...  0=none, 1=static, 2=Guyan, 3=dynamic
+    Cmethod      -  matrix condensation method ...  0=none, 1=static, 2=dynamic, 3=modal
     cx           - 1: retain X d.o.f. in condensed system at node J;  0: don't
     cy           - 1: retain Y d.o.f. in condensed system at node J;  0: don't
     cz           - 1: retain Z d.o.f. in condensed system at node J;  0: don't
@@ -2760,7 +2762,7 @@ frame3dd -i InFile -o OutFile -lOff -e100 -p3.4 -z
 
 <a name="sourcecode"/><h2>12. Source code</h2>
 
-<p>The source code is written in ANSI C and is extensively commented. The source code includes functions for frame analysis, LDL' decomposition, LU decomposition, Newton-Raphson iteration, sub-space iteration, Stodola iteration, Sturm eigen-value check, static condensation, Guyan reduction, and dynamic condensation.</p>
+<p>The source code is written in ANSI C and is extensively commented. The source code includes functions for frame analysis, LDL' decomposition, LU decomposition, Newton-Raphson iteration, sub-space iteration, Stodola iteration, Sturm eigen-value check, static condensation, dynamic condensation, and modal condensation.</p>
 
 <pre>
     file name       description
